# CppSandbox

./: .gitattributes  .gitignore  HowTo.md  LICENSE  ReadMe.md  runAll.sh
C/CuInAssembler/: FunCall.c  FunCall.h  main.c  runMe.sh
C/For_While/: main.c
C/FunctionCalls/: main.c  module.c  module.h  runMe.sh
C/MacroMagic/: MacorDemo.c  Makefile
C/UsingPrintF/: main.c  runMe.sh
CMake/0_UsingConfigs/: CMakeLists.txt  Config.h.in  UseConfigHeader.cpp
CMake/1_UsingStaticLib/: CMakeLists.txt  main.cpp
CMake/1_UsingStaticLib/statLib/: CMakeLists.txt  statLib.h
CMake/2_UsingSharedLib/: CMakeLists.txt  main.cpp
CMake/2_UsingSharedLib/dynLib/: CMakeLists.txt  dynLib.cpp  dynLib.h
CMake/2_UsingSharedLib/statLib/: CMakeLists.txt  statLib.cpp
CMake/3_UsingGoogleTest/: CMakeLists.txt
CMake/3_UsingGoogleTest/source/: CMakeLists.txt  Process.cpp  Process.h  main.cpp
CMake/3_UsingGoogleTest/test/: CMakeLists.txt  ProcessTest.cpp
CMake/4_UsingGoogleTest_Fetched/: CMakeLists.txt
CMake/4_UsingGoogleTest_Fetched/source/: CMakeLists.txt
CMake/4_UsingGoogleTest_Fetched/test/: CMakeLists.txt  MyProcessTest.cpp
CMake/5_UsingCatch2Test/: CMakeLists.txt
CMake/5_UsingCatch2Test/source/: MyProcess.cpp
CMake/5_UsingCatch2Test/tests/: CMakeLists.txt  MyProcessTests.cpp
CMake/6_UsingCatch2_Fetched/: CMakeLists.txt
CMake/6_UsingCatch2_Fetched/tests/: CMakeLists.txt  MyProcessTests.cpp
CMake/DemoProject/: CMakeLists.txt
CMake/DemoProject/app/: CMakeLists.txt  Config.h.in  Version.h.in  main.cpp
CMake/DemoProject/dynLib/: CMakeLists.txt  dynLib.cpp
CMake/DemoProject/lib/: CMakeLists.txt  core.cpp  core.h
CMake/DemoProject/statLib/: CMakeLists.txt  statLib.cpp
CSpecific/CuInAssembler/: FunCall.c  FunCall.h  main.c  runMe.sh
CSpecific/FunctionCalls/: main.c  module.c  module.cpp  module.h  runMe.sh
Cpp/CSharpLikeProperty/: Makefile  Module.h  Property.h  main.cpp
Cpp/ClassImplementation/: main.cpp  runMe.sh
Cpp/UsingReferences/: LegacyModule.cpp  LegacyModule.h  Makefile  MicroFormatter.hpp  Modules.hpp  ReferencedModule.cpp  ReferencedModule.h  main.cpp
Make/SelfExplainingMakeFile/: Makefile  ReadMe.md
Tools/ClassImplementation/: Module.cpp  Module.h
Tools/ClassImplementation/For_While/: runMe.sh
scripts/: convertAllFiles2Unix.sh
